lox-tests/tests/operator/add_bool_num.stderr
ERROR: Unsupported operation '+' between types 'boolean' and 'number'
 --> 1:1
  |
1 | true + 123; // expect runtime error: Operands must be two numbers or two strings.
  | ^--------^
